PUSH NOTE : 1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
@@ -11,9 +11,6 @@ weight: "1"
 
 The World Health Organization’s (WHO) definition, issued in 1946, implied a normative connotation when describing “healthy” as a “state of complete physical, mental, and social well being” ([WHO, 1946](http://www.who.int/governance/eb/who_constitution_en.pdf)). Later definitions continued to reference “the absence of disease or infirmity” as an indicator of a healthy state, thereby relegating people living with disease and disability to an “unhealthy” category. Using these definitions, one can only be part of a healthy population if their disease/disability is treated, or cured, which first requires diagnosis.
 
-
-
-
 Thus, an individual’s health is assessed using diagnostic tests that measure physical and cognitive abilities in a changing environment and comparing these results to a reference standard. When reduced ability, or disease, emerges, researchers use these cases as opportunities to investigate possible causes. The approach can be medical, seeking to understand, or address, the molecular processes that contribute to disease or disability. Alternatively, the approach can be social, investigating how our current and future environments are hindering some persons from contributing to society and living a full life, without social barriers. In some cases, the social model attempts to address the oppression felt by those living with impairment as a result of discriminatory practices ([Shakespeare, 2002](https://www.um.es/discatif/PROYECTO_DISCATIF/Textos_discapacidad/00_Shakespeare2.pdf)). A contemporary approach looks at the intersection of the biomedical and social models of health by investigating how social factors such as stress, poverty, and racism hijack molecular processes resulting in chronic disease/disability and increased mortality ([Eisenberg, 1999](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3455991/); [Galea et al., 2011](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3134519/); [Radley et al., 2011](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3641164/)).
 
 Combining biomedical and social approaches to health aids in our understanding of disease, informs practices that prevent their occurrence, and addresses social discrimination associated with disability. Some of the earliest leaders of social medicine include Rudolph Virchow, an important figure in the history of cell biology, and Louis Pasteur, a pioneer in microbiology and communicable disease prevention ([Pridan, 1964](https://www.microbemagazine.org/index.php?option=com_content&view=article&id=2050:pasteurkoch-distinctive-ways-of-thinking-about-infectious-diseases&catid=502&Itemid=657); [Ullman, 2007](https://www.microbemagazine.org/index.php?option=com_content&view=article&id=2050:pasteurkoch-distinctive-ways-of-thinking-about-infectious-diseases&catid=502&Itemid=657)). Health policies associated with prevention of disease and disability include air pollution standards, laws regarding occupational workplace safety, guidelines for nutrition and exercise, and mass screenings using diagnostic medical tests.
@@ -31,7 +28,8 @@ The field of epigenetics bridges the medical and the social models of health by 
   ![[slide4.png|slide4.png]]
   <figcaption>Cell Signaling and Cell Fate</figcaption>
 </figure>
-%%[[slide4.png|slide4.png]]%%
+
+![[slide4.png|slide4.png]]
 Epigenetics also investigates local micro- environmental effects on cells, tissues, and organs, to determine which environmental signals are responsible for influencing cells to divide, differentiate, move, or die ([Powell, 2005](http://www.nature.com/nature/journal/v435/n7040/full/435268a.html)) (*[Slide 4: Cell Signaling and Cell Fate](http://stemcellcurriculum.org/slidesets.html)*).
 
 <mark style="background: #FF5582A6;">Infographic: Kubicek, S. 2011. Infographic: Epigenetics - A Primer. The Scientist. [Link](http://www.the-scientist.com/?articles.view/articleNo/29546/title/Infographic--Epigenetics---A-Primer/) **! (unable to see infographic)**</mark>
@@ -165,6 +163,8 @@ In the short presentation below, Elizabeth Yeampierre, of the community-based en
   <a href="https://www.youtube.com/watch?v=kCF6dIDcx0k">![[Yeampierre.png|Yeampierre.png]]</a>
   <figcaption>Video: Yeampierre, E. Session 2: Building the Relationship: Citizen and Community Engagement. NIH Workshop to Explore the Ethical, Legal, and Social Implications (ELSI) of Citizen Science. <a href="https://www.youtube.com/watch?v=kCF6dIDcx0k">Link (10:31min)</a></figcaption>
 </figure>
+
+
 
 
 %%___
